# prompt-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  PROJECT_COMPLETION.md  PROJECT_SUMMARY.md  README.md  dev.bat  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
doc/: 01-项目概述.md
examples/: README.md  sample-prompts.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: commands.rs  db.rs  import_export.rs  main.rs  models.rs
src/api/: importExport.ts  prompt.ts
src/components/: HistoryViewer.tsx  HoloWindow.tsx  NeonButton.tsx  PromptCard.tsx  PromptEditor.tsx  PromptList.tsx  SearchBar.tsx  SettingsMenu.tsx  ShortcutSettings.tsx  TagFilter.tsx  ThemeSwitcher.tsx  ToastContainer.tsx  VariableInput.tsx
src/hooks/: useKeyboardShortcut.ts
src/store/: promptStore.ts  themeStore.ts  toastStore.ts
src/styles/: diff.css  glass.css
src/utils/: dateFormat.ts  diffViewer.ts  variableParser.ts
