[package]
name = "prompt-manager"
version = "0.1.0"
description = "Desktop Prompt Manager with variable replacement and version history"
authors = ["you"]
edition = "2021"

[package.metadata.tauri]
identifier = "com.promptmanager.app"

[package.metadata.tauri-winres]
original_filename = "prompt-manager.exe"
file_description = "Prompt Manager"
product_name = "Prompt Manager"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"], default-features = false }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
